# flexui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/basic/: main.cpp
include/flexui/: Button.h  ButtonStyle.h  Component.h  FlexLayout.h  TextInput.h
src/: Button.cpp  FlexLayout.cpp  TextInput.cpp
